# PortfolioBackend

./: .gitignore  README.md  check_redis.py  demo_tools.py  docker-build.sh  docker-compose.prod.yml  docker-compose.yml  dockerfile  env.docker.example  env.example  main.py  profile.md  pyproject.toml  setup_dev.sh  start.sh  test_client.py  test_function_calling.py  test_rate_limiting.py  test_redis_rate_limit.py  test_session.py  test_streaming.py  test_tools.py
data/: system_prompt.md
